# cap-alerts

./: .Rhistory  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cliff.toml  justfile  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cap-analysis-r/: ipaws-alerts.R
cap-parser-rs/: Cargo.toml
cap-parser-rs/src/: main.rs
data/: ipaws_alerts
docs/: api.md  contributing.md  index.md
src/cap_alerts/: __init__.py  app.py  cli.py  db.py  download_alerts.py  extract_xml.py  load_alerts.py  models.py  util.py
