[project]
name = "cap-alerts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Ciani", email = "dciani@davidciani.com" }
]
requires-python = "==3.13.*"
dependencies = [
    "aiofiles>=24.1.0",
    "click>=8.1.8",
    "flask>=3.1.2",
    "geoalchemy2>=0.17.1",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "msgspec>=0.18.6",
    "psycopg[binary,pool]>=3.2.3",
    "pyparsing>=3.2.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.9.4",
    "shapely>=2.0.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "types-lxml>=2024.11.8",
]

[project.scripts]
ipaws-alerts = "cap_alerts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
