[build-system]
requires = ["hatchling", "numpy"]
build-backend = "hatchling.build"


[project]
name = "cap_alerts"
version = "0.1.0"
description = "A Python package to consume, display, and analyze Common Alerting Protocol alerts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "David Ciani", email = "dciani@davidciani.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.14",
     "Typing :: Typed",
     ]
keywords = []
dependencies = [
    "typer",
    "aiofiles>=24.1.0",
    "flask>=3.1.2",
    "geoalchemy2>=0.17.1",
    "httpx>=0.27.2",
    "lxml>=6.1.0",
    "msgspec>=0.18.6",
    "psycopg[binary,pool]>=3.2.3",
    "pyparsing>=3.2.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=13.9.4",
    "shapely>=2.0.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "types-lxml>=2024.11.8",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
  "hatch",
  "prek",
  "pysentry-rs",
  "zensical",
  "mkdocstrings-python"
  ]

[project.urls]
Homepage = "https://github.com/davidciani/cap-alerts"
Documentation = "https://davidciani.github.io/cap-alerts"
Repository = "https://github.com/davidciani/cap-alerts"
Issues = "https://github.com/davidciani/cap-alerts/issues"
Changelog = "https://github.com/davidciani/cap-alerts/blob/main/CHANGELOG.md"


[project.scripts]
cap_alerts = "cap_alerts:main"


# =============================================================================
# Hatch
# =============================================================================

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/{{ project_slug }}"]

# Matrix testing across Python versions
[tool.hatch.envs.test]

[[tool.hatch.envs.test.matrix]]
python = ["3.14"]



# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source =["src/","tests/"]
branch = true
parallel = true

[tool.coverage.paths]
equivalent =[
  "src/"
  ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true

[tool.coverage.json]
output = "htmlcov/coverage.json"

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TC",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]


[tool.ruff.lint.isort]
known-first-party = ["cap_alerts"]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]


# =============================================================================
# ty (Astral type checker)
# =============================================================================

[tool.ty.src]
include = ["**/*.py"]

# =============================================================================
# git-cliff (Changelog generation)
# =============================================================================

[tool.git-cliff]
config = "cliff.toml"

# =============================================================================
# uv
# =============================================================================
[tool.uv]
package = true
default-groups = ["dev"]